--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Michael Ashe <mickjohnashe@hotmail.com>"]
 
 [dependencies]
-serde = "0.8"
-serde_derive = "0.8"
-chrono = { version = "0.2", features = ["serde"] }
+serde = "1.0.11"
+serde_derive = "1.0.11"
+serde_json = "1.0.2"
+chrono = { version = "0.4", features = ["serde"] }
